fixed artwork spacing

--- a/podcast/static/podcast/CSS/style.css
+++ b/podcast/static/podcast/CSS/style.css
@@ -66,9 +66,11 @@ div.navbar-header {
 
 .row {
     background-color: white;
-    margin-bottom: 2px;
+    margin: 3px;
     border-radius: 25px;
     padding: 4px;
+
+
 
 }
 
@@ -133,7 +135,7 @@ button.btn-default {
 }
 
 .podcast-cover-image {
-    margin: 5px;
+    margin: 10px;
     box-shadow: 5px 5px 2px grey;
 }
 
@@ -144,4 +146,10 @@ button.btn-default {
 .bullhorn {
     color: #51ba56;
 }
+
+.episode-search-name {
+    text-align: right;
+}
+
+
 
